Fix compatibility of product on small screens

--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -65,7 +65,7 @@
 }
 
 @media screen and (max-width: 568px) {
-  .menuItem {
+  .product {
     grid-template:
       "title vegan" auto
       "description description" auto
